tests/build/cases/widget/property_already_captured2.stderr
error: property `id` already captured in `new`
 --> cases/widget/property_already_captured2.rs:7:62
  |
7 |     fn new(child: impl UiNode, id: impl IntoValue<WidgetId>, id: impl IntoValue<WidgetId>) {
  |                                                              ^^

error[E0415]: identifier `id` is bound more than once in this parameter list
 --> cases/widget/property_already_captured2.rs:7:62
  |
7 |     fn new(child: impl UiNode, id: impl IntoValue<WidgetId>, id: impl IntoValue<WidgetId>) {
  |                                                              ^^ used as parameter more than once
